[workspace]
members = [
  "numbat-wasm",
  "numbat-wasm-debug",
  "numbat-wasm-derive",
  "denali",
  "numbat-codec-derive",

  "contracts/benchmarks/str-repeat",
  "contracts/benchmarks/send-tx-repeat",

  "contracts/examples/adder",
  "contracts/examples/adder/abi",
  "contracts/examples/crowdfunding-erc20",
  "contracts/examples/crowdfunding-erc20/abi",
  "contracts/examples/crowdfunding-dcdt",
  "contracts/examples/crowdfunding-dcdt/abi",
  "contracts/examples/crypto-bubbles",
  "contracts/examples/crypto-bubbles/abi",
  "contracts/examples/crypto-kitties/kitty-ownership",
  "contracts/examples/crypto-kitties/kitty-genetic-alg",
  "contracts/examples/crypto-kitties/kitty-auction",
  "contracts/examples/rewa-dcdt-swap",
  "contracts/examples/rewa-dcdt-swap/abi",
  "contracts/examples/dcdt-nft-marketplace",
  "contracts/examples/dcdt-nft-marketplace/abi",
  "contracts/examples/erc20",
  "contracts/examples/erc20/abi",
  "contracts/examples/erc1155",
  "contracts/examples/erc1155/abi",
  "contracts/examples/erc1155-user-mock",
  "contracts/examples/erc1155-user-mock/abi",
  "contracts/examples/erc721",
  "contracts/examples/erc721/abi",
  "contracts/examples/factorial",
  "contracts/examples/factorial/abi",
  "contracts/examples/lottery-erc20",
  "contracts/examples/lottery-erc20/abi",
  "contracts/examples/lottery-dcdt",
  "contracts/examples/lottery-dcdt/abi",
  "contracts/examples/multisig",
  "contracts/examples/multisig/abi",
  "contracts/examples/nft-storage-prepay",
  "contracts/examples/nft-storage-prepay/abi",
  "contracts/examples/ping-pong-rewa",
  "contracts/examples/ping-pong-rewa/abi",
  "contracts/examples/erc20",
  "contracts/examples/erc20/abi",
  "contracts/examples/erc1155-marketplace",
  "contracts/examples/erc1155-marketplace/abi",
  "contracts/examples/erc1155",
  "contracts/examples/erc1155/abi",
  "contracts/examples/erc1155-user-mock",
  "contracts/examples/erc1155-user-mock/abi",

  "contracts/feature-tests/abi-tester",
  "contracts/feature-tests/abi-tester/abi",
  "contracts/feature-tests/async",
  "contracts/feature-tests/async/async-alice",
  "contracts/feature-tests/async/async-bob",
  "contracts/feature-tests/async/forwarder",
  "contracts/feature-tests/async/forwarder-raw",
  "contracts/feature-tests/async/recursive-caller",
  "contracts/feature-tests/async/vault",
  "contracts/feature-tests/basic-features",
  "contracts/feature-tests/basic-features/abi",
  "contracts/feature-tests/deploy-two-contracts",
  "contracts/feature-tests/dcdt-contract-pair",
  "contracts/feature-tests/dcdt-contract-pair/first-contract",
  "contracts/feature-tests/dcdt-contract-pair/second-contract",
  "contracts/feature-tests/execute-on-dest-dcdt-issue-callback/parent",
  "contracts/feature-tests/execute-on-dest-dcdt-issue-callback/child",
  "contracts/feature-tests/local-dcdt-and-nft",
  "contracts/feature-tests/nft-receiver",
  "contracts/feature-tests/panic-message-features",
  "contracts/feature-tests/payable-features",
  "contracts/feature-tests/payable-features/abi",
  "contracts/feature-tests/use-module",
  "contracts/feature-tests/use-module/abi",

  "contracts/modules/numbat-wasm-module-features",
  "contracts/modules/numbat-wasm-module-pause",
  "contracts/modules/numbat-wasm-module-users",

  "tools/test-gen",
]

exclude = [
  "numbat-wasm-node",
  "numbat-wasm-output",
]
