[package]
name = "denali"
version = "0.7.2"
edition = "2018"

authors = ["Sumanth <saisumanthvadla@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/chetahvarsha/sdk_v0.17.1.git"
homepage = "https://numbat.com/"
documentation = "https://docs.numbat.com/"
description = "Parser/writer of the Denali test format"
keywords = ["numbat", "blockchain", "contract"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
sha3 = "0.9.1"
