[package]
name = "numbat-codec-derive"
version = "0.5.3"
edition = "2018"

authors = ["dorin.iancu <dorin.iancu@numbat.com>", "Andrei Marinica <andrei.marinica@numbat.com>", "Numbat Network <contact@numbat.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/chetahvarsha/sdk_v0.17.1.git"
homepage = "https://numbat.com/"
documentation = "https://docs.numbat.com/"
description = "Macro implementations of numbat-codec #[derive(NestedEncode, NestedDecode, TopEncode, TopDecode)]"
keywords = ["numbat", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[lib]
name = "numbat_codec_derive"
proc-macro = true

[features]
default = ["syn/full", "syn/parsing", "syn/extra-traits"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
hex = "0.4"
