[package]
name = "numbat-codec"
version = "0.5.3"
edition = "2018"

authors = ["Andrei Marinica <andrei.marinica@numbat.com>", "Numbat Network <contact@numbat.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/chetahvarsha/sdk_v0.17.1.git"
homepage = "https://numbat.com/"
documentation = "https://docs.numbat.com/"
description = "Lightweight binary serializer/deserializer, written especially for Numbat smart contracts"
keywords = ["numbat", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[features]
derive = ["numbat-codec-derive"]

[dependencies.numbat-codec-derive]
path = "../numbat-codec-derive"
version = "0.5.3"
optional = true

[dependencies]
wee_alloc = "0.4"
arrayvec = { version = "0.5.2", default-features = false, features = ["array-sizes-33-128", "array-sizes-129-255"] }

[dev-dependencies.numbat-codec-derive]
path = "../numbat-codec-derive"
version = "0.5.3"
