[package]
name = "numbat-wasm-derive"
version = "0.17.2"
edition = "2018"

authors = ["Andrei Marinica <andrei.marinica@numbat.com>", "Numbat Network <contact@numbat.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/chetahvarsha/sdk_v0.17.1.git"
homepage = "https://numbat.com/"
documentation = "https://docs.numbat.com/"
description = "Numbat WebAssembly smart contract API procedural macros"
keywords = ["numbat", "blockchain", "contract"]
categories = ["cryptography::cryptocurrencies", "development-tools::procedural-macro-helpers"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
hex = "0.4"

[features]
default = ["syn/full", "syn/parsing", "syn/extra-traits"]

[lib]
name = "numbat_wasm_derive"
proc-macro = true
