[package]
name = "numbat-wasm"
version = "0.17.2"
edition = "2018"

authors = ["Andrei Marinica <andrei.marinica@numbat.com>", "Numbat Network <contact@numbat.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/chetahvarsha/sdk_v0.17.1.git"
homepage = "https://numbat.com/"
documentation = "https://docs.numbat.com/"
description = "Numbat WebAssembly smart contract API"
keywords = ["numbat", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[features]
legacy-nft-transfer = []

[dependencies]
wee_alloc = "0.4"
arrayvec = { version = "0.5.2", default-features = false, features = ["array-sizes-33-128", "array-sizes-129-255"] }
hashbrown = "0.9.1"
hex-literal = "0.3.1"

[dependencies.numbat-codec]
version = "0.5.3"
path = "../numbat-codec"
features = ["derive"]
