[package]
name = "send-tx-repeat"
version = "0.0.0"
authors = ["Sumanth <saisumanthvadla@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = ["numbat-wasm-node"]

[dependencies.numbat-wasm]
version = "0.17.2"
path = "../../../numbat-wasm"

[dependencies.numbat-wasm-derive]
version = "0.17.2"
path = "../../../numbat-wasm-derive"

[dependencies.numbat-wasm-node]
version = "0.17.2"
path = "../../../numbat-wasm-node"
optional = true

[dev-dependencies.numbat-wasm-debug]
version = "0.17.2"
path = "../../../numbat-wasm-debug"
