[package]
name = "async"
version = "0.0.0"
authors = ["Sumanth <saisumanthvadla@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = ["numbat-wasm-node"]

[dependencies.async-alice]
path = "async-alice"

[dependencies.async-bob]
path = "async-bob"

[dependencies.forwarder]
path = "forwarder"

[dependencies.forwarder-raw]
path = "forwarder-raw"

[dependencies.vault]
path = "vault"

[dependencies.numbat-wasm]
version = "0.17.2"
path = "../../../numbat-wasm"

[dependencies.numbat-wasm-derive]
version = "0.17.2"
path = "../../../numbat-wasm-derive"

[dependencies.numbat-wasm-node]
version = "0.17.2"
path = "../../../numbat-wasm-node"
optional = true

[dev-dependencies.numbat-wasm-debug]
version = "0.17.2"
path = "../../../numbat-wasm-debug"
