[package]
name = "kitty-ownership"
version = "0.0.0"
authors = [ "Sumanth <saisumanthvadla@gmail.com>",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "numbat-wasm-node",]

[dependencies.kitty]
version = "0.0.0"
path = "../common/kitty"

[dependencies.random]
version = "0.0.0"
path = "../common/random"

[dependencies.kitty-genetic-alg]
version = "0.0.0"
path = "../kitty-genetic-alg"

[dependencies.numbat-wasm]
version = "0.17.2"
path = "../../../../numbat-wasm"

[dependencies.numbat-wasm-derive]
version = "0.17.2"
path = "../../../../numbat-wasm-derive"

[dependencies.numbat-wasm-node]
version = "0.17.2"
path = "../../../../numbat-wasm-node"
optional = true

[dev-dependencies.numbat-wasm-debug]
version = "0.17.2"
path = "../../../../numbat-wasm-debug"
