[package]
name = "erc1155-marketplace-abi"
version = "0.0.0"
authors = ["Sumanth <saisumanthvadla@gmail.com>"]
edition = "2018"
publish = false

[dependencies.erc1155-marketplace]
path = ".."

[dependencies.numbat-wasm]
version = "0.17.2"
path = "../../../../numbat-wasm"

[dependencies.numbat-wasm-debug]
version = "0.17.2"
path = "../../../../numbat-wasm-debug"
