[package]
name = "lottery-erc20-wasm"
version = "0.0.0"
authors = [ "Sumanth <saisumanthvadla@gmail.com>",]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = ["."]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.lottery-erc20]
features = [ "wasm-output-mode",]
default-features = false
path = ".."

[dependencies.numbat-wasm-output]
version = "0.17.2"
path = "../../../../numbat-wasm-output"
features = [ "wasm-output-mode",]
