[package]
name = "ping-pong-rewa-wasm"
version = "0.0.1"
authors = [ "Sumanth <saisumanthvadla@gmail.com>",]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.ping-pong-rewa]
features = [ "wasm-output-mode",]
path = ".."

[dependencies.numbat-wasm-output]
version = "0.17.2"
path = "../../../../numbat-wasm-output"
features = [ "wasm-output-mode",]
