[package]
name = "rewa-dcdt-swap-wasm"
version = "0.0.0"
authors = [ "Sumanth <saisumanthvadla@gmail.com>",]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.rewa-dcdt-swap]
path = ".."
features = ["wasm-output-mode"]
default-features = false

[dependencies.numbat-wasm-output]
version = "0.17.2"
path = "../../../../numbat-wasm-output"
features = ["wasm-output-mode"]
