[package]
name = "kitty"
version = "0.0.0"
authors = [ "Sumanth <saisumanthvadla@gmail.com>",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.numbat-wasm]
version = "0.17.2"
path = "../../../../../numbat-wasm"

[dependencies.numbat-wasm-derive]
version = "0.17.2"
path = "../../../../../numbat-wasm-derive"

[dependencies.random]
version = "0.0.0"
path = "../random"
